CMAKE_MINIMUM_REQUIRED (VERSION 3.5.2)

SET(ProName GwVulkan)

PROJECT (${ProName})

SET(CMAKE_CXX_STANDARD 20)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)

OPTION(PROJECT_VULKANPRO "VulkanPro" ON)
# 根据项目选项添加子项目
if (PROJECT_VULKANPRO)
	ADD_SUBDIRECTORY(3rd/glfw)

    	ADD_SUBDIRECTORY(VulkanPro)
endif()